<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('stock_entity_aliases', function (Blueprint $table) {
            $table->id();
            $table->foreignId('entity_id')->constrained('stock_entities')->cascadeOnDelete();
            $table->string('alias', 255);
            $table->string('alias_norm', 255);
            $table->integer('weight')->default(1);
            $table->timestamps();

            $table->index('alias_norm');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('stock_entity_aliases');
    }
};
